# quad_flight_control

./: .gitignore  CMakeLists.txt  Makefile  README.md  matrix_class  matrix_class.cc
extras/: ekf_example_quat.cc  motor_tests_bak.cc
extras/decode_flight_data/: decodeFlightData.m  struct_read.m
libs/CommonUtils/: CMakeLists.txt
libs/CommonUtils/include/: baro_utils.h  constants.h  coordinate_transformation.h  ekf_utils.h  fcs_out_data.h  gps_utils.h  imu_utils.h  mahony_filter.h  notch_filter.h  pwm_output_utils.h  rc_input_utils.h  write_utils.h
libs/CommonUtils/src/: baro_utils.cc  coordinate_transformation.cc  fcs_out_data.cc  gps_utils.cc  imu_utils.cc  mahony_filter.cc  notch_filter.cc  pwm_output_utils.cc  rc_input_utils.cc  write_utils.cc
libs/Ekf/: ._include  ._src  CMakeLists.txt
libs/Ekf/include/: ekf_15dof_class.h  ekf_16dof_quat_class.h  ekf_21dof_class.h  ekf_base_class.h
libs/Ekf/src/: ekf_15dof_class.cc  ekf_16dof_quat_class.cc  ekf_21dof_class.cc  ekf_base_class.cc
libs/Fcs/: CMakeLists.txt
libs/Fcs/include/: fcsModel.cpp  fcsModel.h  fcsModel_data.cpp  fcsModel_private.h  fcsModel_types.h  fcs_params.h  rtwtypes.h
libs/Fcs/src/: fcsModel.cpp  fcsModel_data.cpp
libs/Matrix/: CMakeLists.txt
libs/Matrix/include/Matrix/: matrix_base_class.h  matrix_factorization_class.h  matrix_inv_class.h
libs/Matrix/src/: matrix_base_class.cc  matrix_factorization_class.cc  matrix_inv_class.cc
libs/Matrix/test/: CMakeLists.txt  matrix_lib_unittests.cc
libs/Navio/: ._Common  CMakeLists.bak  CMakeLists.txt
libs/Navio/Common/: CMakeLists.txt  InertialSensor.h  MPU9250.cpp  MS5611.cpp  MS5611.h  Ublox.cpp  Ublox.h
libs/Navio/Navio2/: ADC_Navio2.h  CMakeLists.txt  LSM9DS1.h  Led_Navio2.h  PWM.cpp  RCInput_Navio2.cpp  RCInput_Navio2.h  RCOutput_Navio2.h  RGBled.h
src/: ekf_example.cc  matrix_main.cc  motor_tests.cc  quad_flight_control.cc
